added meta tags for social network sites

--- a/Cram/client/public/index.html
+++ b/Cram/client/public/index.html
@@ -3,7 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Cram</title>
+  <meta property="og:title" content="Cram Flashcards" />
+  <meta property="og:description" content="Create and Study Your Own Flashcards" />
+  <meta property="og:url" content="https://cram-flashcards.herokuapp.com/" />
+  <meta property="og:image" content="https://i.imgur.com/GFTx30T.png" />
+  <meta property="og:image:height" content="600" />
+  <meta property="og:image:width" content="1080" />
+  <meta name="viewport", content="width=device-width, initial-scale=1.0" />
+  <meta property="og:type" content="website" />
+  <title>Cram Flashcards</title>
 </head>
 
 <body>
